--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   equatable: ^1.0.1
   flutter_bloc: ^3.0.0
   http: ^0.12.0+2
@@ -28,7 +30,9 @@ dependencies:
   geolocator: ^3.0.1
   path_provider: ^0.5.0+1
   shared_preferences: ^0.5.6
-
+  easy_localization: ^1.2.1+1
+  google_maps_flutter: ^0.5.7
+  google_maps_webservice: ^0.0.13
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
@@ -54,6 +58,10 @@ flutter:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
+  assets:
+    - assets/
+    - assets/langs/en-US.json
+    - assets/langs/ar-SA.json
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
